--- a/src/globals.css
+++ b/src/globals.css
@@ -11,3 +11,30 @@
 .slide-fade-leave-to {
   transform: translateY(16px);
 }
+
+/* Animations */
+.animate-progress-bar {
+  animation-name: progress-bar;
+  animation-duration: 750ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  /*
+   * Add an animation delay so that cached routes
+   * will not trigger this animation
+   */
+  animation-delay: 0ms;
+}
+
+/* Keyframes */
+@keyframes progress-bar {
+  from {
+    transform: translateX(-100%);
+    /* Override initial opacity value */
+    opacity: 1;
+  }
+  to {
+    transform: translateX(100%);
+    /* Override initial opacity value */
+    opacity: 1;
+  }
+}
