--- a/src/globals.css
+++ b/src/globals.css
@@ -4,12 +4,17 @@
 }
 .slide-fade-enter-from, .slide-fade-leave-to {
   opacity: 0;
-}
-.slide-fade-enter-from {
   transform: translateY(16px);
 }
-.slide-fade-leave-to {
-  transform: translateY(16px);
+
+.page-enter-active {
+  transition: opacity .3s cubic-bezier(0,.65,.35,1), transform .3s cubic-bezier(0,.65,.35,1);
+}
+.page-enter-from, .page-leave-to {
+  opacity: 0;
+}
+.page-enter-from {
+  transform: translateX(32px);
 }
 
 /* Animations */
