--- a/src/globals.css
+++ b/src/globals.css
@@ -21,6 +21,13 @@ html, body {
   transform: translateX(32px);
 }
 
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .3s cubic-bezier(0,.65,.35,1);
+}
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
+}
+
 /* Animations */
 .animate-progress-bar {
   animation-name: progress-bar;
