feat: add initial launcher structure

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,10 @@
+/* Properties */
+@property --border-angle {
+  inherits: false;
+  initial-value: 0deg;
+  syntax: '<angle>';
+}
+
 /* Vue transitions */
 .slide-fade-enter-active, .slide-fade-leave-active {
   transition: opacity .3s cubic-bezier(0,.65,.35,1), transform .3s cubic-bezier(0,.65,.35,1);
@@ -50,6 +57,9 @@
   animation-timing-function: linear;
   animation-direction: alternate;
 }
+.animate-border {
+  animation: border 8s linear infinite;;
+}
 
 /* Keyframes */
 @keyframes progress-bar {
@@ -77,4 +87,7 @@
   50% { background-color: #94e2d5 }
   75% { background-color: #f9e2af }
   100% { background-color: #f38ba8 }
+}
+@keyframes border {
+  to { --border-angle: 360deg }
 }
