feat: improve launcher ui

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,8 @@
+/* Global */
+button span {
+  pointer-events: none; /* fixes buttons not firing when click target is the 'span' child */
+}
+
 /* Properties */
 @property --border-angle {
   inherits: false;
