feat: implement animated accent for everything

--- a/src/globals.css
+++ b/src/globals.css
@@ -66,6 +66,7 @@ button span {
 }
 .animated-accent-text { color: var(--animated-accent) }
 .animated-accent-background { background-color: var(--animated-accent) }
+.animated-accent-border { border-color: var(--animated-accent) }
 .animated-accent-before-background:before { background-color: var(--animated-accent) }
 
 /* Keyframes */
